--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+name: E2ETest
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
   build:
     strategy:
       matrix:
-        go-version: ['1.18', '1.19', '1.20', '1.21']
+        go-version: ['1.21', '1.22']
     runs-on: ubuntu-latest
     services:
       mysql:
@@ -45,6 +45,6 @@ jobs:
       run: |
         mysql -h 127.0.0.1 -u root -ppassword -e 'SHOW DATABASES;'
 
-    - name: Run a MySQL command
+    - name: Test csql
       run: |
-        csql --path=./testdata/csv/test01.csv --type=mysql --dsn="hoge:hoge@tcp(localhost:3308)/hoge?parseTime=true&collation=utf8mb4_bin"
+        csql --path=./testdata/csv/test01.csv --type=mysql --dsn="root:password@tcp(127.0.0.1:3306)/testdb?parseTime=true&collation=utf8mb4_bin"
